--- a/task0002/zchen9/task0002_1.html
+++ b/task0002/zchen9/task0002_1.html
@@ -7,11 +7,13 @@
     <link href="css/task0002_1.css" rel="stylesheet">
 </head>
 <body>
-    <label for="hobbit" class="ask">请输入你的爱好:</label>
-    <textarea id="hobbit" ></textarea>
-    <input type="button" id="btn" value="提交">
-    <span id="tip"></span>
-    <div id="hobbit-text"></div>
+    <section>
+        <label for="hobbit" class="ask">请输入你的爱好:</label>
+        <textarea id="hobbit" ></textarea>
+        <input type="button" id="btn" value="提交">
+        <span id="tip"></span>
+        <div id="hobbit-text"></div>
+    </section>
 
     <script src="js/util.js"></script>
     <script src="js/task0002_1.js"></script>
