--- a/task0002/zchen9/task0002_2.html
+++ b/task0002/zchen9/task0002_2.html
@@ -7,12 +7,14 @@
     <link href="css/task0002_2.css" rel="stylesheet">
 </head>
 <body>
-    <label for="time" class="ask">Please enter a date:</label>
-    <input type="text" id="time" placeholder="YYYY-MM-DD"><span id="tip"></span>
-    <input type="button" id="btn" value="submit">
+    <section>
+        <label for="time" class="ask">Please enter a date:</label>
+        <input type="text" id="time" placeholder="YYYY-MM-DD"><span id="tip"></span>
+        <input type="button" id="btn" value="submit">
 
-    <p id="timeCount"></p>
-    
+        <p id="timeCount"></p>
+    </section>
+
     <script src="js/util.js"></script>
     <script src="js/task0002_2.js"></script>
 </body>
