--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -84,6 +84,8 @@
 			</div>
 		</section>
 	</div>
+
+	<script src="js/todo.util.js"></script>
 	<script src="js/todo.shell.js"></script>
 </body>
 </html>
