--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -50,9 +50,9 @@
         </section>
         <section class="todo-inventory">
             <ul class="todo-inventory-category">
-                <li><span class="todo-inventory-selected">所有</span></li>
-                <li><span>未完成</span></li>
-                <li><span>已完成</span></li>
+                <li class="todo-inventory-selected">所有</li>
+                <li>未完成</li>
+                <li>已完成</li>
             </ul>
             <dl class="todo-inventory-detail">
                 <dt><time>2015-05-15</time></dt>
