update theme color

--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -6,10 +6,12 @@
     <title>Todo</title>
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/todo.shell.css" rel="stylesheet">
+	<link href="css/todo.color.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1 class="todo-title">ToDo</h1>
+	    <a href="http://www.chen9.info"></a>
     </header>
     <div class="todo-container">
         <section class="todo-category">
