--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -98,5 +98,6 @@
 
     <script src="js/todo.util.js"></script>
     <script src="js/todo.shell.js"></script>
+	<script src="js/todo.data.js"></script>
 </body>
 </html>
