--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -32,9 +32,6 @@
                 <li>已完成</li>
             </ul>
             <dl class="todo-inventory-detail">
-                <!--<dt><time>2015-05-15</time></dt>-->
-                <!--<dd>to-do 1</dd>-->
-                <!--<dd>to-do 2</dd>-->
             </dl>
             <a id="todo-add-task"><i class="fa fa-plus fa-fw"></i>新增任务</a>
         </section>
@@ -43,7 +40,7 @@
             <form name="taskForm" id="todo-form">
                 <div class="todo-spec-title">
                     <label><i class="fa fa-flag"></i></label>
-                    <input type="text" id="todo-task-title" placeholder="在这里输入标题">
+                    <input type="text" id="todo-task-title" placeholder="在这里输入标题" autofocus="autofocus">
                     <span id="todo-default-title"></span>
                 <span class="todo-spec-edit">
                     <i class="fa fa-pencil-square-o fa-2x"></i>
@@ -56,7 +53,7 @@
                     <span id="todo-default-time"></span>
                 </div>
                 <div class="todo-spec-content">
-                    <textarea id="todo-task-content" placeholder="在这里输入内容"></textarea>
+                    <textarea id="todo-task-content" placeholder="在这里输入内容" ></textarea>
                     <p id="todo-default-content"></p>
                 </div>
             </form>
