--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -43,17 +43,19 @@
                     <input type="text" id="todo-task-title" placeholder="在这里输入标题" autofocus="autofocus" display="none">
                     <span id="todo-default-title"></span>
                 <span class="todo-spec-edit">
+                    <i class="fa fa-check fa-2x" style="display: none"></i>
+                    <i class="fa fa-undo fa-2x"  style="display: none"></i>
                     <i class="fa fa-pencil-square-o fa-2x"></i>
                     <i class="fa fa-check-square-o fa-2x"></i>
                 </span>
                 </div>
                 <div class="todo-spec-time">
                     <label><i class="fa fa-calendar"></i></label>
-                    <input id="todo-task-time" type="date" display="none">
+                    <input id="todo-task-time" type="date" style="display: none">
                     <span id="todo-default-time"></span>
                 </div>
                 <div class="todo-spec-content">
-                    <textarea id="todo-task-content" placeholder="在这里输入内容"  display="none"></textarea>
+                    <textarea id="todo-task-content" placeholder="在这里输入内容" style="display: none"></textarea>
                     <p id="todo-default-content"></p>
                 </div>
             </form>
@@ -81,8 +83,8 @@
     </div>
 
     <script src="js/todo.util.js"></script>
-    <script src="js/todo.shell.js"></script>
     <script src="js/todo.data.js"></script>
-    <script src="js/todo.task.js"></script>
+    <script src="js/todo.shell.js"></script>
+
 </body>
 </html>
