--- a/task0003/zchen9/index.html
+++ b/task0003/zchen9/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="zh-cn">
+<head lang="zh-CN">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
     <title>Todo - zchen9</title>
