--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -2,11 +2,28 @@
 <html>
 <head lang="zh-CN">
     <meta charset="UTF-8">
+    <title>Todo - zchen9</title>
+
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="app-touch-fullscreen" content="YES">
+    <meta name="apple-moblie-web-app-capable" content="YES">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Todo - zchen9</title>
+
+    <!-- apple app icon -->
+    <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+    <link rel="apple-touch-icon-precomposed" href="./img/apple-touch-icon-chen.png">
+    <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./img/apple-touch-icon-72x72-chen.png">
+    <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./img/apple-touch-icon-144x144-chen.png">
+    <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./img/apple-touch-icon-144x144-chen.png">
+
+    <!-- apple stratup png -->
+    <link rel="app-touch-startup-image" href="./img/loading.png">
+
+    <!-- CSS -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/todo.shell.css" rel="stylesheet">
     <link href="css/todo.mobile.css" rel="stylesheet">
@@ -17,6 +34,7 @@
         <a href="http://www.chen9.info"></a>
         <h1 class="todo-title">ToDo</h1>
     </header>
+
     <div class="todo-container">
         <section class="todo-category">
             <p class="todo-category-total">
@@ -29,6 +47,7 @@
             </div>
             <a id="todo-add-category"><i class="fa fa-plus fa-fw"></i>新增分类</a>
         </section>
+
         <section class="todo-inventory">
             <ul class="todo-inventory-category">
                 <li class="todo-inventory-selected" id="todo-all">所有</li>
@@ -85,6 +104,14 @@
             <span id="add-cate-check"><i class="fa fa-smile-o"></i>确认</span>
         </div>
     </div>
+
+    <footer class="todo-nav">
+        <ul>
+            <li class="todo-nav-item" id="todo-nav-cates"><i class="fa fa-archive fa-fw"></i>分类</li>
+            <li class="todo-nav-item" id="todo-nav-inves"><i class="fa fa-tasks fa-fw"></i>清单</li>
+            <li class="todo-nav-item" id="todo-nav-tasks"><i class="fa fa-table fa-fw"></i>详细</li>
+        </ul>
+    </footer>
 
     <script src="js/todo.util.js"></script>
     <script src="js/todo.data.js"></script>
