--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -8,17 +8,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta name="app-touch-fullscreen" content="YES">
     <meta name="apple-moblie-web-app-capable" content="YES">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="ToDo">
 
     <!-- apple app icon -->
-    <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-    <link rel="apple-touch-icon-precomposed" href="./img/apple-touch-icon-chen.png">
-    <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+    <!-- 57x57 (precomposed) -->
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./img/apple-touch-icon-chen.png">
+    <!-- 72x72 (precomposed) -->
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./img/apple-touch-icon-72x72-chen.png">
-    <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+    <!-- 114x114 (precomposed) -->
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./img/apple-touch-icon-144x144-chen.png">
-    <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./img/apple-touch-icon-144x144-chen.png">
 
     <!-- apple stratup png -->
     <link rel="app-touch-startup-image" href="./img/loading.png">
