add effect & fix bug

--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -30,8 +30,19 @@
 </head>
 <body>
     <header>
-        <a href="http://www.chen9.info"></a>
-        <h1 class="todo-title">ToDo</h1>
+        <!-- 应用开头 -->
+        <div class="todo-head">
+            <a href="http://www.chen9.info" class="todo-icon"></a>
+            <h1 class="todo-title">ToDo</h1>
+        </div>
+        
+        <!-- 预加载 -->
+        <div class = "todo-start">
+            <a class="todo-start-icon"></a>
+            <h1 class="todo-start-title">Welcome to ToDo</h1>
+            <span>Loading...</span>
+        </div>
+        
     </header>
 
     <div class="todo-container">
