--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -29,7 +29,7 @@
     <link href="css/todo.color.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header style="height: 100%;">
         <!-- 应用开头 -->
         <div class="todo-head">
             <a href="http://www.chen9.info" class="todo-icon"></a>
@@ -41,8 +41,7 @@
             <a class="todo-start-icon"></a>
             <h1 class="todo-start-title">Welcome to ToDo</h1>
             <span>Loading...</span>
-        </div>
-        
+        </div> 
     </header>
 
     <div class="todo-container">
