--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -29,20 +29,18 @@
     <link href="css/todo.color.css" rel="stylesheet">
 </head>
 <body>
-    <header style="height: 100%;">
+    <header>
         <!-- 应用开头 -->
-        <div class="todo-head">
-            <a href="http://www.chen9.info" class="todo-icon"></a>
-            <h1 class="todo-title">ToDo</h1>
-        </div>
-        
-        <!-- 预加载 -->
-        <div class = "todo-start">
-            <a class="todo-start-icon"></a>
-            <h1 class="todo-start-title">Welcome to ToDo</h1>
-            <span>Loading...</span>
-        </div> 
+        <a href="http://www.chen9.info" class="todo-icon"></a>
+        <h1 class="todo-title">ToDo</h1>
     </header>
+
+    <!-- 预加载 -->
+    <div class = "todo-start">
+        <a class="todo-start-icon"></a>
+        <h1 class="todo-start-title">Welcome to Here</h1>
+        <span>Loading...</span>
+    </div>
 
     <div class="todo-container">
         <section class="todo-category">
