--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <!-- 预加载 -->
-    <div class ="todo-start">
+    <div class ="todo-start" style="height: 100%;">
         <a class="todo-start-icon"></a>
         <h1 class="todo-start-title">Welcome to Here</h1>
         <span>Loading...</span>
@@ -114,7 +114,7 @@
 
     <footer class="todo-nav">
         <ul>
-            <li class="todo-nav-item" id="todo-nav-cates"><i class="fa fa-archive fa-fw"></i>分类</li>
+            <li class="todo-nav-item" id="todo-nav-cates"><i class="fa fa-archive fa-fw"></i>分类</li> 
             <li class="todo-nav-item" id="todo-nav-inves"><i class="fa fa-tasks fa-fw"></i>清单</li>
             <li class="todo-nav-item" id="todo-nav-tasks"><i class="fa fa-table fa-fw"></i>详细</li>
         </ul>
