--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -24,9 +24,8 @@
 
     <!-- CSS -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/todo.shell.css" rel="stylesheet">
-    <link href="css/todo.mobile.css" rel="stylesheet">
-    <link href="css/todo.color.css" rel="stylesheet">
+    <link href="css/todo.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
