--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -19,9 +19,6 @@
     <!-- 114x114 (precomposed) -->
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./img/apple-touch-icon-144x144-chen.png">
 
-    <!-- apple stratup png -->
-    <link rel="app-touch-startup-image" href="./img/loading.png">
-
     <!-- CSS -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/todo.min.css" rel="stylesheet">
@@ -62,7 +59,7 @@
             <form name="taskForm" id="todo-form">
                 <div class="todo-spec-title">
                     <label><i class="fa fa-flag"></i></label>
-                    <input type="text" id="todo-task-title" placeholder="在这里输入标题" autofocus="autofocus" display="none">
+                    <input type="text" id="todo-task-title" placeholder="在这里输入标题" display="none">
                     <span id="todo-default-title"></span>
                 <span class="todo-spec-edit">
                     <i class="fa fa-check fa-2x" style="display: none"></i>
