--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="todo.manifest">
 <head lang="zh-CN">
     <meta charset="UTF-8">
     <title>Todo - zchen9</title>
