--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -111,7 +111,8 @@
 
     <script src="js/todo.util.js"></script>
     <script src="js/todo.data.js"></script>
-    <script src="js/todo.mobile.js"></script>
+    <script src="js/todo.render.js"></script>
+    <script src="js/todo.controller.js"></script>
     <script src="js/todo.shell.js"></script>
 </body>
 </html>
