--- a/task0004/zchen9/index.html
+++ b/task0004/zchen9/index.html
@@ -109,10 +109,6 @@
         </ul>
     </footer>
 
-    <script src="js/todo.util.js"></script>
-    <script src="js/todo.data.js"></script>
-    <script src="js/todo.render.js"></script>
-    <script src="js/todo.controller.js"></script>
-    <script src="js/todo.shell.js"></script>
+    <script src="js/require.js" data-main="js/todo.shell" defer async="true"></script>
 </body>
 </html>
