--- a/task0004/app/index.html
+++ b/task0004/app/index.html
@@ -13,15 +13,15 @@
 
     <!-- apple app icon -->
     <!-- 57x57 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./img/apple-touch-icon-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./images/apple-touch-icon-chen.png">
     <!-- 72x72 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./img/apple-touch-icon-72x72-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./images/apple-touch-icon-72x72-chen.png">
     <!-- 114x114 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./img/apple-touch-icon-144x144-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./images/apple-touch-icon-144x144-chen.png">
 
     <!-- CSS -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/todo.min.css" rel="stylesheet">
+    <link href="styles/font-awesome.css" rel="stylesheet">
+    <link href="styles/todo.css" rel="stylesheet">
 
 </head>
 <body>
@@ -109,6 +109,6 @@
         </ul>
     </footer>
 
-    <script src="js/require.js" data-main="js/todo.shell" defer async="true"></script>
+    <script src="scripts/require.js" data-main="scripts/todo.shell"></script>
 </body>
 </html>
