--- a/task0004/app/index.html
+++ b/task0004/app/index.html
@@ -6,18 +6,18 @@
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <meta name="app-touch-fullscreen" content="YES">
-    <meta name="apple-moblie-web-app-capable" content="YES">
+    <meta name="app-touch-fullscreen" content="yes">
+    <meta name="apple-moblie-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="ToDo">
 
     <!-- apple app icon -->
     <!-- 57x57 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./images/apple-touch-icon-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./images/apple-touch-icon-precomposed.png">
     <!-- 72x72 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./images/apple-touch-icon-72x72-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./images/apple-touch-icon-72x72-precomposed.png">
     <!-- 114x114 (precomposed) -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./images/apple-touch-icon-144x144-chen.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./images/apple-touch-icon-144x144-precomposed.png">
 
     <!-- CSS -->
     <link href="styles/font-awesome.css" rel="stylesheet">
