--- a/task0016/task.html
+++ b/task0016/task.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>IFE JavaScript Task 01</title>
-    <script src="task.js"></script>
   </head>
 <body>
 
@@ -25,6 +24,7 @@
     </tr>
    -->
   </table>
-
+  <script src="../util.js"></script>
+  <script src="./task.js"></script>
 </body>
 </html>
